--- a/TicTacToe/TicTacToe/Main.storyboard
+++ b/TicTacToe/TicTacToe/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="landscape">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -17,66 +17,66 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TicTacToe Game" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="197" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="305.5" y="71" width="125" height="20.5"/>
+                                <rect key="frame" x="144.5" y="232" width="125" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="198" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO">
-                                <rect key="frame" x="347.5" y="108.5" width="46" height="46"/>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="198" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" tag="2">
+                                <rect key="frame" x="186.5" y="269.5" width="46" height="46"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.69019607843137254" green="0.96470588235294119" blue="1" alpha="1"/>
                                 <color key="tintColor" colorSpace="calibratedRGB" red="0.6" green="0.4" blue="0.2" alpha="1"/>
                                 <state key="normal">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="199" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO">
-                                <rect key="frame" x="347.5" y="164.5" width="46" height="46"/>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="199" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" tag="5">
+                                <rect key="frame" x="186.5" y="325.5" width="46" height="46"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.69019607843137254" green="0.96470588235294119" blue="1" alpha="1"/>
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="200" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO">
-                                <rect key="frame" x="347.5" y="220.5" width="46" height="46"/>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="200" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" tag="8">
+                                <rect key="frame" x="186.5" y="381.5" width="46" height="46"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.69019607843137254" green="0.96470588235294119" blue="1" alpha="1"/>
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="201" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO">
-                                <rect key="frame" x="403.5" y="108.5" width="46" height="46"/>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="201" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" tag="3">
+                                <rect key="frame" x="242.5" y="269.5" width="46" height="46"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.69019607843137254" green="0.96470588235294119" blue="1" alpha="1"/>
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="202" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO">
-                                <rect key="frame" x="403.5" y="164.5" width="46" height="46"/>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="202" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" tag="6">
+                                <rect key="frame" x="242.5" y="325.5" width="46" height="46"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.69019607843137254" green="0.96470588235294119" blue="1" alpha="1"/>
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="203" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO">
-                                <rect key="frame" x="403.5" y="220.5" width="46" height="46"/>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="203" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" tag="9">
+                                <rect key="frame" x="242.5" y="381.5" width="46" height="46"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.69019607843137254" green="0.96470588235294119" blue="1" alpha="1"/>
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="204" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO">
-                                <rect key="frame" x="291.5" y="108.5" width="46" height="46"/>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="204" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" tag="1">
+                                <rect key="frame" x="130.5" y="269.5" width="46" height="46"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.69019607843137254" green="0.96470588235294119" blue="1" alpha="1"/>
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal">
@@ -86,17 +86,18 @@
                                     <constraint id="320" firstItem="204" firstAttribute="width" constant="46"/>
                                     <constraint id="321" firstItem="204" firstAttribute="height" constant="46"/>
                                 </constraints>
+                                <connections/>
                             </button>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="205" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO">
-                                <rect key="frame" x="291.5" y="164.5" width="46" height="46"/>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="205" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" tag="4">
+                                <rect key="frame" x="130.5" y="325.5" width="46" height="46"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.69019607843137254" green="0.96470588235294119" blue="1" alpha="1"/>
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                             </button>
-                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="206" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO">
-                                <rect key="frame" x="291.5" y="220.5" width="46" height="46"/>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="206" translatesAutoresizingMaskIntoConstraints="NO" opaque="NO" tag="7">
+                                <rect key="frame" x="130.5" y="381.5" width="46" height="46"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.69019607843137254" green="0.96470588235294119" blue="1" alpha="1"/>
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal">
@@ -104,8 +105,11 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="210" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="328.5" y="273.5" width="84" height="30"/>
+                                <rect key="frame" x="167.5" y="434.5" width="84" height="30"/>
                                 <state key="normal" title="Reset Game"/>
+                                <connections>
+                                    <action selector="ResetButton_TouchUpInside:" destination="BYZ-38-t0r" id="4336" eventType="touchUpInside"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
@@ -152,15 +156,15 @@
                     </view>
                     <connections>
                         <outlet property="ResetButton" destination="210" id="name-outlet-210"/>
-                        <outlet property="1_1Button" destination="204" id="name-outlet-204"/>
-                        <outlet property="1_2Button" destination="198" id="name-outlet-198"/>
-                        <outlet property="1_3Button" destination="201" id="name-outlet-201"/>
-                        <outlet property="2_1Button" destination="205" id="name-outlet-205"/>
-                        <outlet property="2_2Button" destination="199" id="name-outlet-199"/>
-                        <outlet property="2_3Button" destination="202" id="name-outlet-202"/>
-                        <outlet property="3_1Button" destination="206" id="name-outlet-206"/>
-                        <outlet property="3_2Button" destination="200" id="name-outlet-200"/>
-                        <outlet property="3_3Button" destination="203" id="name-outlet-203"/>
+                        <outlet property="Button1" destination="204" id="name-outlet-204"/>
+                        <outlet property="Button2" destination="198" id="name-outlet-198"/>
+                        <outlet property="Button3" destination="201" id="name-outlet-201"/>
+                        <outlet property="Button4" destination="205" id="name-outlet-205"/>
+                        <outlet property="Button5" destination="199" id="name-outlet-199"/>
+                        <outlet property="Button6" destination="202" id="name-outlet-202"/>
+                        <outlet property="Button7" destination="206" id="name-outlet-206"/>
+                        <outlet property="Button8" destination="200" id="name-outlet-200"/>
+                        <outlet property="Button9" destination="203" id="name-outlet-203"/>
                         <outlet property="TitleLabel" destination="197" id="name-outlet-197"/>
                     </connections>
                 </viewController>
